# vunit2config

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
test/: test_generate.py
vunit2config/: __init__.py  generate.py
