[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 50.0.0", "wheel", "setuptools_scm >= 6.0.0"]

[tool.black]
line-length = 120

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["vunit"]

[tool.pylint.messages_control]
disable = ["fixme", "logging-fstring-interpolation"]
max-line-length = 120

[pycodestyle]
max-line-length = 120
statistics = true