[metadata]
name = vunit2config
version = attr: vunit2config.__version__
author = Benjamin Hallenrud

description = Create config files for linters and formaters from a vunit object
long_description = file: README.md, LICENSE

keywords = HDL, VUnit

license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
include_package_data = True
packages = find:

install_requires =
    vunit-hdl>=4.4.0
